--- a/freelancer_inicio/index.html
+++ b/freelancer_inicio/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet">
+    <link rel="preload" href="css/styles.css" as="style">
     <title>Diseñador freelancer</title>
 </head>
 <body>
-    <h1>Nicolas Quintana Freelancer</h1>
-
+    <header>
+        <h1 class="titulo">Nicolas Quintana <span>Freelancer</span></h1>
+    </header>
+    
     <nav>
         <a href="inicio.html">Inicio</a>
         <a href="sobreMi.html">Sobre Mi</a>
@@ -16,7 +20,7 @@
     </nav>
 
     <section>
-        <h2>Diseño y desarrollo web</h2>
+        <h2 class="titulo">Diseño y desarrollo web</h2>
         <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="#d4d742"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-map-pin"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" /><path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" /></svg>        <p>Montevideo, Uruguay</p>
 
         <a href="#">Contactar</a>
